# Kingdom-QuarterMaster

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
frontend/: DESIGN_BRIEF.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: AgentCard.tsx  AuthorizationGauge.tsx  Chrome.tsx  KindGlyph.tsx  KingdomMark.tsx  StateScreen.tsx  StatusStamp.tsx
frontend/src/lib/: agent.ts  format.ts  reward.ts  useDebounced.ts
frontend/src/views/: AgentDetail.tsx  Dashboard.tsx  Recommend.tsx
src/kqm/: __init__.py  __main__.py  _demo.py  auth.py  branding.py  config.py  recommend.py  reconcile.py  render.py  riot_client.py  service.py  static_data.py  webapp.py
src/kqm/webui/: index.html
src/kqm/webui/assets/: index-BzYiVxMO.css  index-CyNhR7-w.js  index-DgLLfkiS.css  index-DzrsJ7Ht.js  index-jjR78zTD.js
tests/: test_recommend.py  test_reconcile.py  test_service.py  test_webapp.py
tests/fixtures/: contracts.json  owned_agents.json  owned_sprays.json  static_agents.json  static_contracts.json  static_currencies.json  wallet.json
