[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kingdom-quartermaster"
version = "0.1.0"
description = "Kingdom Quartermaster: local, read-only CLI to track Valorant agent gear (contract) unlocks and recommend Kingdom Credit purchases."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx~=0.28.1",
    "rich~=15.0",
    "platformdirs~=4.10",
]

[project.scripts]
kqm = "kqm.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the built web UI (frontend/ -> src/kqm/webui via `npm run build`) so
# `kqm ui` serves it with no Node at runtime.
kqm = ["webui/**/*"]

[project.optional-dependencies]
dev = ["pytest~=9.1", "ruff~=0.9"]
ui = ["fastapi>=0.115", "uvicorn>=0.34"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
